src/tests/ci/assignment_5_functions/valid/16_basic_includes.c
#include "src/tests/ci/assignment_5_functions/valid/math.h"

int main() {
    int x = add(5, 3);
    return x;
}